--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Musical Structure App</string>
+    <string name="app_name">Musical Structure</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_now_playing">NowPlayingActivity</string>
-    <string name="title_activity_song_list">SongListActivity</string>
-    <string name="title_activity_playlist">PlaylistActivity</string>
-    <string name="title_activity_music_store">MusicStoreActivity</string>
+    <string name="title_activity_now_playing">Now Playing</string>
+    <string name="title_activity_song_list">List of songs</string>
+    <string name="title_activity_playlist">Playlists</string>
+    <string name="title_activity_music_store">Music Store</string>
 </resources>
